--- a/kadry/src/main/webapp/pracownikaneksy/sub/pracownik_aneksy.xhtml
+++ b/kadry/src/main/webapp/pracownikaneksy/sub/pracownik_aneksy.xhtml
@@ -22,7 +22,7 @@
                 <p:outputPanel style="margin-top: 20px;">
                     <p:dataTable id="datalist" value="#{pracownikAneksyView.listaumowy}" var="itemUmowa" rowIndexVar="yndex" filteredValue="#{pracownikAneksyView.listaumowyfiltered}"
                                  selectionMode="single" 
-                                 rowKey="#{itemUmowa.id}"  sortBy="#{itemUmowa.datado}"
+                                 rowKey="#{itemUmowa.id}"  sortBy="#{itemUmowa.nazwiskoImie}"
                                  style="height: 450px; overflow-y: scroll;width: 1550px;"
                                  rowsPerPageTemplate="20,100,250,500" paginatorPosition="top" paginator="true" rows="20"
                                  emptyMessage="Nie pobrano listy"
@@ -55,7 +55,7 @@
                             </f:facet>
                             <h:outputText value="#{itemUmowa.czastrwania}"/>
                         </p:column>
-                        <p:column width="60" style="text-align: center;" sortBy="#{itemUmowa.dataod}" sortOrder="desc">
+                        <p:column width="60" style="text-align: center;" >
                             <f:facet name="header">
                                 <h:outputText value="data od"/>
                             </f:facet>
@@ -97,11 +97,11 @@
                             </f:facet>
                             <h:outputText value="&#x2714;" rendered="#{itemUmowa.zmiennawynagrodzenia.minimalneustatowe}" style="color: green;"/>
                         </p:column>
-                         <p:column width="30" style="text-align: center;">
+                        <p:column width="30" style="text-align: center;">
                             <f:facet name="header">
                                 <h:outputText value="wal."/>
                             </f:facet>
-                             <h:outputText value="#{itemUmowa.zmiennawynagrodzenia.waluta}"/>
+                            <h:outputText value="#{itemUmowa.zmiennawynagrodzenia.waluta}"/>
                         </p:column>
                         <p:column width="30" style="text-align: center;">
                             <f:facet name="header">
@@ -144,7 +144,7 @@
         <p:tab title="wykaz aneksów">
             <h:form id="AneksWykazForm">
                 <p:outputPanel>
-                     <p:dataTable id="aneksylist" value="#{dokumentyWykazView.lista}" var="itemAneks" rowIndexVar="yndexa" filteredValue="#{dokumentyWykazView.listafiltered}"
+                    <p:dataTable id="aneksylist" value="#{dokumentyWykazView.lista}" var="itemAneks" rowIndexVar="yndexa" filteredValue="#{dokumentyWykazView.listafiltered}"
                                  selectionMode="single" 
                                  rowKey="#{itemAneks.id}"  sortBy="#{itemAneks.data}"
                                  style="height: 450px; overflow-y: scroll;width: 550px;"
@@ -160,36 +160,41 @@
                             </f:facet>
                             <h:outputText value="#{yndexa+1}"/>
                         </p:column>
-                         <p:column width="70" style="text-align: center;">
+                        <p:column width="70" style="text-align: center;">
                             <f:facet name="header">
                                 <h:outputText value="data"/>
                             </f:facet>
-                             <h:outputText value="#{itemAneks.data}"/>
+                            <h:outputText value="#{itemAneks.data}"/>
                         </p:column>
-                         <p:column width="100" style="text-align: center;">
+                        <p:column width="100" style="text-align: center;">
                             <f:facet name="header">
                                 <h:outputText value="data"/>
                             </f:facet>
-                             <h:outputText value="#{itemAneks.angaz.pracownik.nazwiskoImie}"/>
+                            <h:outputText value="#{itemAneks.angaz.pracownik.nazwiskoImie}"/>
                         </p:column>
                         <p:column width="20" style="text-align: center;">
                             <f:facet name="header">
                                 <h:outputText value="aneks"/>
                             </f:facet>
-                              <h:outputText value="&#x2714;" rendered="#{itemAneks.aneks}" style="color: green;"/>
+                            <h:outputText value="&#x2714;" rendered="#{itemAneks.aneks}" style="color: green;"/>
                         </p:column>
-                         <p:column width="20" style="text-align: center;">
+                        <p:column width="20" style="text-align: center;">
                             <f:facet name="header">
                                 <h:outputText value=""/>
                             </f:facet>
                             <p:commandButton  icon="pi pi-arrow-down" ajax="false" onclick="PrimeFaces.monitorDownload(showStatus, hideStatus)"   >
-                                  <p:fileDownload value="#{dokumentyWykazView.getFile(itemAneks)}" />
+                                <p:fileDownload value="#{dokumentyWykazView.getFile(itemAneks)}" />
                             </p:commandButton>
-                            <p:commandButton value="usuń" actionListener="#{dokumentyWykazView.usun(itemAneks)}" update="AneksWykazForm" styleClass="buttonnorm2" >
-                         <p:confirm type="popup" header="Usuwanie dokumentu pracownika" message="Na pewno usunąć dokument?" icon="pi pi-exclamation-triangle"/>
-                    </p:commandButton>
                         </p:column>
-                     </p:dataTable>
+                        <p:column width="20" style="text-align: center;">
+                            <f:facet name="header">
+                                <h:outputText value=""/>
+                            </f:facet>
+                            <p:commandButton icon="pi pi-trash" actionListener="#{dokumentyWykazView.usun(itemAneks)}" update="akordeon:AneksWykazForm" >
+                                <p:confirm type="popup" header="Usuwanie dokumentu pracownika" message="Na pewno usunąć dokument?" icon="pi pi-exclamation-triangle"/>
+                            </p:commandButton>
+                        </p:column>
+                    </p:dataTable>
                 </p:outputPanel>
             </h:form>
         </p:tab>
