--- a/kadry/src/main/webapp/firma/sub/edycjadanych_firmy.xhtml
+++ b/kadry/src/main/webapp/firma/sub/edycjadanych_firmy.xhtml
@@ -115,6 +115,10 @@
                 </p:panel>
             </h:form>
         </p:outputPanel>
+        <h:outputText value=""/>
+        <p:outputPanel>
+            <h:outputText value="Jeśli firma nie daje się usunąć tzn. że jeszcze jakiś użytkownik z niej korzysta/korzystał" style="color: green;"/>
+        </p:outputPanel>
     </p:panelGrid>
     <p:panelGrid columns="2" columnClasses="thirty-percent, seventy-percent" style="width: 1500px;">
         <p:outputPanel  style="height: 450px;width: 1500px;overflow-y: scroll;">
