--- a/kadry/src/main/webapp/pracownikaneksy/sub/pracownik_aneksy.xhtml
+++ b/kadry/src/main/webapp/pracownikaneksy/sub/pracownik_aneksy.xhtml
@@ -197,6 +197,9 @@
                     </p:dataTable>
                 </p:outputPanel>
             </h:form>
+<!--            <h:form>
+                <p:commandButton value="porzadkuj kalendar" styleClass="buttonnorm" actionListener="#{kalendarzGlobalnyView.ustaw()}" />
+            </h:form>-->
         </p:tab>
     </p:tabView>
 </ui:composition>
