--- a/kadry/src/main/webapp/historia/sub/edycjadanych_historia.xhtml
+++ b/kadry/src/main/webapp/historia/sub/edycjadanych_historia.xhtml
@@ -142,7 +142,7 @@
                 </h:form>
             </p:panelGrid>
             <p:panel header="Pobranie danych wybranej osoby z programu SuperPłace" style="margin-top: 10px;"/>
-            <h:outputText value="Program pobiera dane za rok 2020, 2021 i 2022. Bieżący rok i mc w programie nie ma znaczenia." style="color: darkorchid;margin-left: 30px;"/>
+            <h:outputText value="Program pobiera dane za rok 2020, 2021 i 2022. Bieżący rok i mc w programie nie ma znaczenia. Jeśli trzeba ponownie dodać pracownika, który ma umowe zlecenia i prace trzeba usunąć anaż." style="color: green;margin-left: 30px;"/>
            <p:panelGrid columns="2">
 <!--            <h:form id="SuperForm" style="margin-top: 10px;">
                 <p:panelGrid columns="3">
