srobne naprawy biurowe

--- a/kadry/src/main/webapp/firma/sub/edycjadanych_firmy.xhtml
+++ b/kadry/src/main/webapp/firma/sub/edycjadanych_firmy.xhtml
@@ -38,7 +38,7 @@
                     <p:inputText id="nazwa" value="#{firmaView.selected.nazwa}" title="nazwa" required="true" requiredMessage="Wpisz nazwę"/>
                     <p:outputLabel value="email" for="email" />
                     <p:inputText id="email" value="#{firmaView.selected.email}" title="email" required="true" requiredMessage="Wpisz email">
-                        <p:ajax event="blur" listener="#{firmaView.sprawdzmail}" partialSubmit="true"/>
+<!--                       <p:ajax event="blur" listener="#{firmaView.sprawdzmail}" partialSubmit="true"/>-->
                     </p:inputText>
                     <p:outputLabel value="telefon" for="telefon" />
                     <p:inputText id="telefon" value="#{firmaView.selected.telefon}" title="telefon" required="true" requiredMessage="Wpisz telefon"/>
