--- a/kadry/src/main/webapp/umowa/sub/dane_umowa_funkcja.xhtml
+++ b/kadry/src/main/webapp/umowa/sub/dane_umowa_funkcja.xhtml
@@ -114,12 +114,12 @@
                         </f:facet>
                         <h:outputText value="#{itemumowa.pierwszydzienzasilku}"/>
                     </p:column>
-                    <p:column style="text-align: center;">
+<!--                    <p:column style="text-align: center;">
                         <f:facet name="header">
                             <h:outputText value="koszty uzyskania"/>
                         </f:facet>
                         <h:outputText value="#{itemumowa.kosztyuzyskaniaprocent}"/>
-                    </p:column>
+                    </p:column>-->
                     <p:column style="text-align: center;">
                         <f:facet name="header">
                             <h:outputText value="kod ubezpieczenia"/>
