--- a/kadry/src/main/webapp/admin/sub/dialog/dialog_lista_plac_sub_normalna.xhtml
+++ b/kadry/src/main/webapp/admin/sub/dialog/dialog_lista_plac_sub_normalna.xhtml
@@ -23,7 +23,7 @@
                             <h:outputText value="koszt prac."/>
                         </p:column>
                         <p:column>
-                            <h:outputText value="#{itempasek.wiekpasek}" style="color: green;"/>
+                            <h:outputText value="#{itempasek.wiekpasek}" style="color: #009688;"/>
                         </p:column>
                         <p:column>
                             <h:outputText value="brutto z zus"/>
@@ -71,7 +71,7 @@
                             <h:outputText value="/import" style="color:blue;" rendered="#{itempasek.importowany eq true}"/>
                         </p:column>
                         <p:column>
-                            <h:outputText value="nierezydent" rendered="#{itempasek.nierezydent}" style="color: green;"/>
+                            <h:outputText value="nierezydent" rendered="#{itempasek.nierezydent}" style="color: #009688;"/>
                         </p:column>
                         <p:column>
                             <bcf:outputpl value="#{itempasek.bruttozus}" />
@@ -173,7 +173,7 @@
                     </p:row>
                     <p:row>
                         <p:column>
-                            <h:outputText value="#{itempasek.nazwiskoImie}"/>
+                            <h:outputText value="#{itempasek.nazwiskoImie}" style="color: #009688"/>
                         </p:column>
                         
 <!--                        <p:column>
@@ -213,8 +213,8 @@
                         <p:column>
                             <bcf:outputpl value="#{itempasek.potracenia}"/>
                         </p:column>
-                        <p:column>
-                            <bcf:outputpl value="#{itempasek.netto}"/>
+                        <p:column style="text-align: right;">
+                            <bcf:outputpl value="#{itempasek.netto}" style="color: #009688;"/>
                         </p:column>
                         <p:column width="20" style="text-align: center;">
                             <p:commandButton icon="pi pi-trash" actionListener="#{pasekwynagrodzenView.usun(itempasek)}" global="false" update="@form NieobecnoscListForm DefinicjalistaplacCreateForm2"/>
