--- a/kadry/src/main/webapp/admin/sub/dialog/dialog_czaspracy_nieobecnosci_zbiorcze.xhtml
+++ b/kadry/src/main/webapp/admin/sub/dialog/dialog_czaspracy_nieobecnosci_zbiorcze.xhtml
@@ -86,7 +86,7 @@
                                 </p:panelGrid>
                             </p:fragment>
                         </p:panelGrid>
-                        <p:commandButton styleClass="buttonnorm" actionListener="#{nieobecnoscView.createzbiorczo}" value="#{bundle.Save}" update="display"/>
+                        <p:commandButton styleClass="buttonnorm" actionListener="#{nieobecnoscView.createzbiorczo(wpisView.firma)}" value="#{bundle.Save}" update="display"/>
                         <p:commandButton value="#{bundle.Cancel}" onclick="NieobecnoscCreateDialog.hide()"/>
                     </h:panelGroup>
                 </h:form>
